--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
 
 <body>
     <h3>This is a About Page</h3>
+    <a href="https://www.codingal.com">go to codingal</a>
     <a href="index.html">this is home page</a>
 </body>
 
